--- a/notebooks/Dibimbing-kafka-2.ipynb
+++ b/notebooks/Dibimbing-kafka-2.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "984cf422-fabd-43a4-8e1e-9771303b556b",
    "metadata": {
     "tags": []
@@ -60,12 +60,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "0ca0789d-785e-48c8-bd95-f6152f51ed96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kafka_topic_partition = \"dibimbing_batch_7\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "47d743be-7190-48e0-87c0-5f6ddedff5da",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'kafka_topic_partition' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mkafka\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m KafkaConsumer\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# To consume latest messages and auto-commit offsets\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m consumer \u001b[38;5;241m=\u001b[39m KafkaConsumer(\u001b[43mkafka_topic_partition\u001b[49m,\n\u001b[1;32m      5\u001b[0m                          group_id\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdibimbing-group\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      6\u001b[0m                          bootstrap_servers\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkafka_host\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m:9092\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'kafka_topic_partition' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from kafka import KafkaConsumer\n",
     "\n",
@@ -184,6 +206,14 @@
     "                                          message.offset, message.key,\n",
     "                                          message.value))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3040d17a-e0d5-490b-96dc-84fdf5899699",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
