assignment streaming data pipeline

--- a/notebooks/Dibimbing-spark-stream-1.ipynb
+++ b/notebooks/Dibimbing-spark-stream-1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {
     "tags": []
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {
     "tags": []
    },
@@ -60,10 +60,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f91c6dd21d0>"
+       "<pyspark.sql.session.SparkSession at 0x7fd0b4763f10>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -184,6 +184,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(Arrival_Time=1424686735011, Creation_Time=1424686733015076670, Device='nexus4_1', Index=3, Model='nexus4', User='g', gt='stand', x=0.0014038086, y=0.03147888, z=0.01109314),\n",
+       " Row(Arrival_Time=1424686735214, Creation_Time=1424688581265321168, Device='nexus4_2', Index=50, Model='nexus4', User='g', gt='stand', x=-0.008926392, y=-0.04034424, z=0.0034332275),\n",
+       " Row(Arrival_Time=1424686735420, Creation_Time=1424688581471925172, Device='nexus4_2', Index=91, Model='nexus4', User='g', gt='stand', x=-0.0003814697, y=-0.0018920898, z=-0.015792847),\n",
+       " Row(Arrival_Time=1424686735618, Creation_Time=1424686733619416269, Device='nexus4_1', Index=123, Model='nexus4', User='g', gt='stand', x=0.0003356934, y=-0.030471802, z=-0.025222778),\n",
+       " Row(Arrival_Time=1424686735821, Creation_Time=1424688581874604615, Device='nexus4_2', Index=171, Model='nexus4', User='g', gt='stand', x=0.0038909912, y=-0.013641357, z=0.01411438)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "static.head(5)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -217,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {
     "tags": []
    },
@@ -243,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {
     "tags": []
    },
@@ -255,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
@@ -264,7 +290,7 @@
     "activityCounts = streaming.select('index').distinct()\n",
     "activityQuery = (\n",
     "    activityCounts.writeStream\n",
-    "    .queryName('activity_counts_1')\n",
+    "    .queryName('activity_counts_2')\n",
     "    .format('memory')\n",
     "    .outputMode('append')\n",
     "    .start()\n",
@@ -287,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
@@ -323,7 +349,7 @@
       "+--------+\n",
       "|count(1)|\n",
       "+--------+\n",
-      "|  347585|\n",
+      "|  353592|\n",
       "+--------+\n",
       "\n"
      ]
@@ -332,7 +358,7 @@
    "source": [
     "from time import sleep\n",
     "for x in range(5):\n",
-    "    spark.sql(\"SELECT COUNT(*) FROM activity_counts_1\").show()\n",
+    "    spark.sql(\"SELECT COUNT(*) FROM activity_counts_2\").show()\n",
     "    sleep(1)"
    ]
   },
@@ -347,7 +373,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "streaming = (\n",
+    "    spark\n",
+    "    .readStream\n",
+    "    .schema(dataSchema)\n",
+    "    .option('maxFilesPerTrigger', 1)\n",
+    "    .json('/resources/data/activity-data/')\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "tags": []
    },
@@ -371,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {
     "tags": []
    },
@@ -443,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {
     "tags": []
    },
@@ -474,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {
     "tags": []
    },
@@ -483,93 +526,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---+-----+\n",
-      "| gt|count|\n",
-      "+---+-----+\n",
-      "+---+-----+\n",
-      "\n",
-      "+---+-----+\n",
-      "| gt|count|\n",
-      "+---+-----+\n",
-      "+---+-----+\n",
-      "\n",
-      "+---+-----+\n",
-      "| gt|count|\n",
-      "+---+-----+\n",
-      "+---+-----+\n",
-      "\n",
-      "+----------+-----+\n",
-      "|        gt|count|\n",
-      "+----------+-----+\n",
-      "|       sit|12309|\n",
-      "|     stand|11384|\n",
-      "|stairsdown| 9365|\n",
-      "|      walk|13256|\n",
-      "|  stairsup|10452|\n",
-      "|      null|10449|\n",
-      "|      bike|10796|\n",
-      "+----------+-----+\n",
-      "\n",
-      "+----------+-----+\n",
-      "|        gt|count|\n",
-      "+----------+-----+\n",
-      "|       sit|12309|\n",
-      "|     stand|11384|\n",
-      "|stairsdown| 9365|\n",
-      "|      walk|13256|\n",
-      "|  stairsup|10452|\n",
-      "|      null|10449|\n",
-      "|      bike|10796|\n",
-      "+----------+-----+\n",
-      "\n",
-      "+----------+-----+\n",
-      "|        gt|count|\n",
-      "+----------+-----+\n",
-      "|       sit|24619|\n",
-      "|     stand|22769|\n",
-      "|stairsdown|18729|\n",
-      "|      walk|26512|\n",
-      "|  stairsup|20905|\n",
-      "|      null|20896|\n",
-      "|      bike|21593|\n",
-      "+----------+-----+\n",
-      "\n",
-      "+----------+-----+\n",
-      "|        gt|count|\n",
-      "+----------+-----+\n",
-      "|       sit|36929|\n",
-      "|     stand|34154|\n",
-      "|stairsdown|28094|\n",
-      "|      walk|39768|\n",
-      "|  stairsup|31357|\n",
-      "|      null|31343|\n",
-      "|      bike|32390|\n",
-      "+----------+-----+\n",
-      "\n",
-      "+----------+-----+\n",
-      "|        gt|count|\n",
-      "+----------+-----+\n",
-      "|       sit|49238|\n",
-      "|     stand|45539|\n",
-      "|stairsdown|37459|\n",
-      "|      walk|53024|\n",
-      "|  stairsup|41809|\n",
-      "|      null|41791|\n",
-      "|      bike|43187|\n",
-      "+----------+-----+\n",
-      "\n",
-      "+----------+-----+\n",
-      "|        gt|count|\n",
-      "+----------+-----+\n",
-      "|       sit|61547|\n",
-      "|     stand|56924|\n",
-      "|stairsdown|46825|\n",
-      "|      walk|66280|\n",
-      "|  stairsup|52260|\n",
-      "|      null|52239|\n",
-      "|      bike|53984|\n",
-      "+----------+-----+\n",
-      "\n",
       "+----------+-----+\n",
       "|        gt|count|\n",
       "+----------+-----+\n",
@@ -581,6 +537,114 @@
       "|      null|62688|\n",
       "|      bike|64781|\n",
       "+----------+-----+\n",
+      "\n",
+      "+----------+-----+\n",
+      "|        gt|count|\n",
+      "+----------+-----+\n",
+      "|       sit|86163|\n",
+      "|     stand|79694|\n",
+      "|stairsdown|65557|\n",
+      "|      walk|92792|\n",
+      "|  stairsup|73162|\n",
+      "|      null|73136|\n",
+      "|      bike|75579|\n",
+      "+----------+-----+\n",
+      "\n",
+      "+----------+------+\n",
+      "|        gt| count|\n",
+      "+----------+------+\n",
+      "|       sit|110778|\n",
+      "|     stand|102464|\n",
+      "|stairsdown| 84286|\n",
+      "|      walk|119304|\n",
+      "|  stairsup| 94067|\n",
+      "|      null| 94033|\n",
+      "|      bike| 97175|\n",
+      "+----------+------+\n",
+      "\n",
+      "+----------+------+\n",
+      "|        gt| count|\n",
+      "+----------+------+\n",
+      "|       sit|123085|\n",
+      "|     stand|113849|\n",
+      "|stairsdown| 93648|\n",
+      "|      walk|132560|\n",
+      "|  stairsup|104521|\n",
+      "|      null|104482|\n",
+      "|      bike|107974|\n",
+      "+----------+------+\n",
+      "\n",
+      "+----------+------+\n",
+      "|        gt| count|\n",
+      "+----------+------+\n",
+      "|       sit|135392|\n",
+      "|     stand|125234|\n",
+      "|stairsdown|103010|\n",
+      "|      walk|145816|\n",
+      "|  stairsup|114975|\n",
+      "|      null|114931|\n",
+      "|      bike|118773|\n",
+      "+----------+------+\n",
+      "\n",
+      "+----------+------+\n",
+      "|        gt| count|\n",
+      "+----------+------+\n",
+      "|       sit|147699|\n",
+      "|     stand|136619|\n",
+      "|stairsdown|112371|\n",
+      "|      walk|159072|\n",
+      "|  stairsup|125431|\n",
+      "|      null|125379|\n",
+      "|      bike|129572|\n",
+      "+----------+------+\n",
+      "\n",
+      "+----------+------+\n",
+      "|        gt| count|\n",
+      "+----------+------+\n",
+      "|       sit|160006|\n",
+      "|     stand|148005|\n",
+      "|stairsdown|121732|\n",
+      "|      walk|172327|\n",
+      "|  stairsup|135888|\n",
+      "|      null|135827|\n",
+      "|      bike|140370|\n",
+      "+----------+------+\n",
+      "\n",
+      "+----------+------+\n",
+      "|        gt| count|\n",
+      "+----------+------+\n",
+      "|       sit|172313|\n",
+      "|     stand|159391|\n",
+      "|stairsdown|131094|\n",
+      "|      walk|185583|\n",
+      "|  stairsup|146344|\n",
+      "|      null|146274|\n",
+      "|      bike|151168|\n",
+      "+----------+------+\n",
+      "\n",
+      "+----------+------+\n",
+      "|        gt| count|\n",
+      "+----------+------+\n",
+      "|       sit|196927|\n",
+      "|     stand|182165|\n",
+      "|stairsdown|149819|\n",
+      "|      walk|212095|\n",
+      "|  stairsup|167255|\n",
+      "|      null|167168|\n",
+      "|      bike|172762|\n",
+      "+----------+------+\n",
+      "\n",
+      "+----------+------+\n",
+      "|        gt| count|\n",
+      "+----------+------+\n",
+      "|       sit|196927|\n",
+      "|     stand|182165|\n",
+      "|stairsdown|149819|\n",
+      "|      walk|212095|\n",
+      "|  stairsup|167255|\n",
+      "|      null|167168|\n",
+      "|      bike|172762|\n",
+      "+----------+------+\n",
       "\n"
      ]
     }
@@ -593,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {
     "tags": []
    },
@@ -601,6 +665,13 @@
    "source": [
     "spark.stop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
